syntax = "proto2";

import "Common.proto";

message JoinRequest {
  required string name = 1;
  required string targetId = 2;
  map<string, string> settings = 3;
}

message JoinResponse {
  message Success {
    map<string, string> settings  = 1;
  }
  message Failure {
    required string reason = 1;
  }

  oneof message {
    Success success = 1;
    Failure failure = 2;
  }
}

message Button {
  required string name = 1;
  required string template = 2;
}

message UIDescription {
  repeated Button buttons = 1;
}

message AddUIDescriptionRequest {
  required string name = 1;
  required string targetId = 2;
  required UIDescription uiDescription = 3;
}

message GetUIDescriptionRequest {
  required string name = 1;
  required string targetId = 2;
}

service ClientEndpoint {
  rpc Join(JoinRequest) returns (JoinResponse);

  rpc AddUiDescription(AddUIDescriptionRequest) returns (Empty);

  rpc GetUiDescription(GetUIDescriptionRequest) returns (UIDescription);
}
